<resources>
    <string name="app_name">분노 진정</string>
    //Main Bottom Navi Menu
    <string name="number_count">숫자세기</string>
    <string name="diary">분노일기</string>
    <string name="calendar">분노달력</string>
    <string name="chart">분노통계</string>
    <string name="setting">설정</string>
    //CountFragment Text
    <string name="countDescription">화면에 숫자를 집중해서\n마음속으로 읽어주세요.</string>
    <string name="countStart">시 작</string>
    <string name="angryDegree">분노 수준</string>
    <string name="angryDegree1">흥분</string>
    <string name="angryDegree2">조금 화남</string>
    <string name="angryDegree3">화남</string>
    <string name="angryDegree4">매우 화남</string>
    <string name="angryDegree5">격노</string>
    <string name="countDiaryWriteQuestion">분노일기를 작성하시겠습니까?</string>
    <string name="replayCount">다시 세기</string>
    <string name="confirm">확 인</string>
    //DiaryFragment Text
    <string name="wholeTime">전체보기</string>
    <string name="save">저 장</string>
    <string name="year">년</string>
    <string name="month">월</string>
    //CalendarFragment Text
    <string name="SUN">일</string>
    <string name="MON">월</string>
    <string name="TUE">화</string>
    <string name="WED">수</string>
    <string name="THU">목</string>
    <string name="FRI">금</string>
    <string name="SAT">토</string>

    //ChartFragment Text
    <string name="whole">전체</string>
    <string name="curYear">올해</string>
    <string name="curMonth">이번달</string>
    <string name="curWeekend">이번주</string>

    //SettingFragment Text
    <string name="totalAngryCount">현재까지 분노한 횟수</string>
    <string name="system">시스템</string>
    <string name="setCount">숫자세기 설정</string>
    <string name="setDiary">일기 설정</string>
    <string name="data">데이터</string>
    <string name="backUpAndRestore">백업 및 복원</string>
    <string name="etc">기타</string>
    <string name="inquiry">문의하기</string>
    <string name="personalInfo">개인정보처리방침</string>
    <string name="nextArrowDescription">해당 설정가기 표시</string>
    <string name="backArrowDescription">뒤로가기 표시</string>
    <string name="backUpHint">작성된 일기 및 분노한 횟수등을 내부 저장소에\n 백업 및 복원할 수 있습니다.</string>
    <string name="backUpHint2">백업/복원\n임시저장 일기는 저장되지 않습니다.\n 완료시 어플리케이션이 재실행됩니다.</string>
    <string name="dataBackup">데이터 백업하기</string>
    <string name="dataRestore">데이터 복원하기</string>
    <string name="ADView">개발자를 위해 광고보기</string>
    <string name="countSettingDescription">숫자 세기를 진행할 때, \n시간 및 종료음을 변경해보세요!</string>
    <string name="countSettingDescription2">핸드폰이 무음모드인 경우, \n종료음(진동, 소리)는 울리지 않습니다.</string>
    <string name="diarySettingDescription">일기를 작성 및 확인할 때, \n임시저장 및 표시를 변경해보세요!</string>
    <string name="diarySettingDescription2">임시저장이 꺼질 경우, \n현재 저장된 임시저장 일기가 삭제됩니다.</string>
    <string name="diaryTempSave">임시저장</string>
    <string name="settingTime">시 간</string>
    <string name="settingSecond1">10초</string>
    <string name="settingSecond2">20초</string>
    <string name="settingSecond3">30초</string>
    <string name="settingSecond4">60초</string>
    <string name="settingEndSound">종료음</string>
    <string name="settingVibration">진동</string>
    <string name="settingSound">소리</string>
    <string name="settingSoundAndVibration">진동+소리</string>
    <string name="settingSilence">무음</string>
    <string name="settingBackUpDate">최근 백업 날짜 :</string>

    //DiaryWrite Activity Text
    <string name="diaryWrite">일기작성</string>
    <string name="diaryInput">일기 입력</string>
    <string name="diaryEditHint">일기를 입력해주세요.</string>
    <string name="angryIconDescription">분노 아이콘</string>
    <string name="angrySelectDescription">현재 분노의 상태를 선택해주세요.</string>
    <string name="angrySelect">분노 선택</string>
    <string name="writeComplete">작성 완료</string>
    <string name="writeTempSave">임시 저장</string>
    <string name="saveCheckMessage">임시저장된 일기가 있습니다. 불러오시겠습니까?</string>
    <string name="saveConfirmMessage">현재 작성 중인 일기를 임시저장하시겠습니까?</string>
    <string name="saveConfirmCautionMessage">임시저장되는 일기는 1개만 가능합니다.</string>
    <string name="cancel">취 소</string>

    //DiaryShow Activity Text
    <string name="spinnerMenuUpdate">수 정</string>
    <string name="spinnerMenuDelete">삭 제</string>
    <string name="diaryDelete">일기삭제</string>
    <string name="deleteConfirmMessage">정말 일기를 삭제하시겠습니까?</string>
</resources>