<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/main_subColor">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/SUN"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/MON"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/TUE"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/WED"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/THU"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/FRI"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/SAT"
        android:fontFamily="@font/font_main"
        android:textColor="@color/gray"
        android:gravity="center"
        android:textSize="14sp"/>
</LinearLayout>