<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.tussle.angrycontrol.viewmodel.SettingCountViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_subColor">

        <ImageButton
            android:id="@+id/setting_count_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/backgroundTransparency"
            android:padding="10dp"
            android:src="@drawable/icon_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/backArrowDescription"/>
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_main"
            android:text="@string/setCount"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="@+id/setting_count_backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/setting_count_backButton"
            app:layout_constraintTop_toTopOf="@+id/setting_count_backButton" />

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_count_backButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_main"
                android:text="@string/countSettingDescription"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/font_main"
                android:text="@string/countSettingDescription2"
                android:textColor="@color/main_color" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_main"
            android:text="@string/settingTime"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:checked="true"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSecond1"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSecond2"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSecond3"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSecond4"
                android:textColor="@color/black" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_main"
            android:padding="10dp"
            android:text="@string/settingEndSound"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:checked="true"
                android:fontFamily="@font/font_main"
                android:text="@string/settingVibration"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSound"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSoundAndVibration"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/main_color"
                android:fontFamily="@font/font_main"
                android:text="@string/settingSilence"
                android:textColor="@color/black" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
