<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_subColor"
            android:fontFamily="@font/font_main"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/diaryDelete"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_main"
            android:layout_marginTop="30dp"
            android:text="@string/deleteConfirmMessage"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/diary_show_delete_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/main_subColor"
            android:fontFamily="@font/font_main"
            android:text="@string/cancel"
            android:textColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <Button
            android:id="@+id/diary_show_delete_confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_subColor"
            android:fontFamily="@font/font_main"
            android:text="@string/confirm"
            android:textColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/diary_show_delete_cancelButton"
            app:layout_constraintTop_toTopOf="@+id/diary_show_delete_cancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>